[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Main/Prototype.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/TerrainSprite_PetriDish_Green.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main/Player.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Main/ControlArea.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="CircleShape2D" id=2]

[node name="MissionPrototype" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameElements" type="Node2D" parent="."]

[node name="MovingBackground" type="Node2D" parent="GameElements"]

[node name="BackgroundImage" type="Sprite" parent="GameElements/MovingBackground"]
position = Vector2( 490, 449 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Player" type="Node2D" parent="GameElements"]
position = Vector2( 100, 0 )
script = ExtResource( 4 )

[node name="AmoebaShape" type="Path2D" parent="GameElements/Player"]
position = Vector2( 10, 10 )
curve = SubResource( 3 )

[node name="ControlPoint1" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 92, 21 )

[node name="ControlArea1" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint1"]
script = ExtResource( 5 )

[node name="ControlCollision1" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint1/ControlArea1"]
shape = SubResource( 2 )

[node name="ControlSprite1" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint1/ControlArea1"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint2" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 151, 47 )

[node name="ControlArea2" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint2"]
script = ExtResource( 5 )

[node name="ControlCollision2" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint2/ControlArea2"]
shape = SubResource( 2 )

[node name="ControlSprite2" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint2/ControlArea2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint3" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 188, 98 )

[node name="ControlArea3" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint3"]
script = ExtResource( 5 )

[node name="ControlCollision3" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint3/ControlArea3"]
shape = SubResource( 2 )

[node name="ControlSprite3" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint3/ControlArea3"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint4" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 150, 139 )

[node name="ControlArea4" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint4"]
script = ExtResource( 5 )

[node name="ControlCollision4" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint4/ControlArea4"]
shape = SubResource( 2 )

[node name="ControlSprite4" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint4/ControlArea4"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint5" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 92, 154 )

[node name="ControlArea5" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint5"]
script = ExtResource( 5 )

[node name="ControlCollision5" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint5/ControlArea5"]
shape = SubResource( 2 )

[node name="ControlSprite5" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint5/ControlArea5"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint6" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 40, 138 )

[node name="ControlArea6" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint6"]
script = ExtResource( 5 )

[node name="ControlCollision6" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint6/ControlArea6"]
shape = SubResource( 2 )

[node name="ControlSprite6" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint6/ControlArea6"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint7" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( -5, 87 )

[node name="ControlArea7" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint7"]
position = Vector2( 13, 0 )
script = ExtResource( 5 )

[node name="ControlCollision7" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint7/ControlArea7"]
shape = SubResource( 2 )

[node name="ControlSprite7" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint7/ControlArea7"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ControlPoint8" type="PathFollow2D" parent="GameElements/Player/AmoebaShape"]
position = Vector2( 26, 51 )

[node name="ControlArea8" type="Area2D" parent="GameElements/Player/AmoebaShape/ControlPoint8"]
script = ExtResource( 5 )

[node name="ControlCollision8" type="CollisionShape2D" parent="GameElements/Player/AmoebaShape/ControlPoint8/ControlArea8"]
shape = SubResource( 2 )

[node name="ControlSprite8" type="Sprite" parent="GameElements/Player/AmoebaShape/ControlPoint8/ControlArea8"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CollisionArea" type="Area2D" parent="GameElements/Player"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GameElements/Player/CollisionArea"]
position = Vector2( 5, 6 )
scale = Vector2( 6.43746, 7.625 )
polygon = PoolVector2Array( 2.33011, 12.9836, 9.32045, 15.8689, 14.2913, 21.2459, 18.7962, 16.5246, 26.4079, 11.8033, 19.7283, 9.18033, 13.67, 3.67213, 9.00976, 9.18033 )

[node name="GameTimer" type="Timer" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]

[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint1/ControlArea1" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint2/ControlArea2" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint3/ControlArea3" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint4/ControlArea4" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint5/ControlArea5" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint6/ControlArea6" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint7/ControlArea7" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
[connection signal="control_pressed" from="GameElements/Player/AmoebaShape/ControlPoint8/ControlArea8" to="GameElements/Player" method="_on_ControlArea_control_pressed"]
